--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
     "redis": "^4.6.15",
     "socket.io": "^4.7.5"
