--- a/.github/workflows/signal-deploy.yml
+++ b/.github/workflows/signal-deploy.yml
@@ -58,6 +58,9 @@ jobs:
             docker image prune -a -f --filter "until=12h"
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             # 데이터베이스 환경변수
+            export EXPRESS_SERVER01_DATABASE_URL=${{ env.EXPRESS_SERVER01_DATABASE_URL }}
+
+            # 레디스 환경변수 
             export SIGNAL_SERVER_REDIS_URL=${{ env.SIGNAL_SERVER_REDIS_URL }}
             export SIGNAL_SERVER_REDIS_PASSWORD=${{ env.SIGNAL_SERVER_REDIS_PASSWORD }}
             export SIGNAL_SERVER_REDIS_PORT=${{ env.SIGNAL_SERVER_REDIS_PORT }}
