--- a/.github/workflows/signal-deploy.yml
+++ b/.github/workflows/signal-deploy.yml
@@ -1,4 +1,4 @@
-name: 시그널 서버 배포 
+name: 시그널 서버 배포
 
 on:
   push:
@@ -65,6 +65,10 @@ jobs:
             export SIGNAL_SERVER_REDIS_PORT=${{ env.SIGNAL_SERVER_REDIS_PORT }}
             # 엔진엑스
             export NGINX_SERVER_EC2_HOST=${{ env.NGINX_SERVER_EC2_HOST }}
+            # JWT 관련
+            export JWT_ACCESS_TOKEN_EXPIRATION=${{ env.JWT_ACCESS_TOKEN_EXPIRATION }}
+            export JWT_REFRESH_TOKEN_EXPIRATION=${{ env.JWT_REFRESH_TOKEN_EXPIRATION }}
+            export JWT_SECRET_KEY01=${{ env.JWT_SECRET_KEY01 }}
             cd signal
             sudo -E docker-compose pull express 
             sudo -E docker-compose up -d express  
