--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@babel/preset-env": "^7.25.3",
     "@prisma/client": "^5.17.0",
     "@socket.io/redis-adapter": "^8.3.0",
+    "axios": "^1.7.4",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "redis": "^4.6.15",
     "socket.io": "^4.7.5"
   },
