--- a/.github/workflows/signal-deploy.yml
+++ b/.github/workflows/signal-deploy.yml
@@ -57,6 +57,8 @@ jobs:
           script: |
             docker image prune -a -f --filter "until=12h"
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            # 환경 상태값 
+            export SIGNAL_SERVER_ENV_STATUS=${{ env.SIGNAL_SERVER_ENV_STATUS }}
             # 데이터베이스 환경변수
             export EXPRESS_SERVER01_DATABASE_URL=${{ env.EXPRESS_SERVER01_DATABASE_URL }}
             # 레디스 환경변수 
